add second post: Hugo to Github

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -11,7 +11,7 @@ params:
     title: "Hello World!"
     subtitle: "Linux Ricer, Cyber Security Enthusiast, Data Analyst, AI Admirer"
       #imageUrl: "https://www.nautiljon.com/images/perso/00/45/fujii_tsukasa_14054.webp"
-    imageUrl: "tsukasa.png"
+    imageUrl: "/Home/tsukasa.png"
     imageWidth: 120
     imageHeight: 120
     buttons:
