--- a/hugo.yaml
+++ b/hugo.yaml
@@ -39,18 +39,15 @@ params:
 
 menu:
   main:
-    - identifier: categories
-      name: Categories
-      url: /categories/
-      weight: 10
-    - identifier: tags
-      name: Tags
-      url: /tags/
-      weight: 20
-    - identifier: archives
-      name: Archives
-      url: /archives/
-      weight: 30
+    - identifier: home
+      name: Home
+      url: /
+    - identifier: search
+      name: Search
+      url: /search/
+    - identifier: tutorial
+      name: Tutorial
+      url: /post/
 
 outputs:
   home:
