modif hugo.yaml

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -4,7 +4,7 @@ title: "Wildan's Workspace"
 theme: 'papermod'
 enableInlineShortCodes: false
 
-ignoreErrors = ["error-missing-instagram-accesstoken"]
+ignoreErrors: "error-missing-instagram-accesstoken"
 
 params:
   author: "Wildan"
