--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -19,8 +19,8 @@ title = "My Awesome Site"
   email = "wildanpastioke@gmail.com"
   image = "tsukasa.png"
   imageQuality = 96
-#   headline = "I'm only human"
-#   bio = "A little bit about you"
+  headline = "An Ordinary Human Being"
+  bio = "An Ordinary Human Being"
   links = [
 #     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
